--- a/src/main/resources/static/resources/css/imaas.css
+++ b/src/main/resources/static/resources/css/imaas.css
@@ -3,7 +3,8 @@
 	border-bottom-right-radius: 0;
 }
 
-.image-location .input-group > .form-control:not(:last-child) {
+.image-location .input-group > .form-control:not(:last-child),
+.input-group > .custom-file:not(:last-child) .custom-file-label {
 	border-top-right-radius: .25rem;
 	border-bottom-right-radius: .25rem;
 }
